--- a/index.html
+++ b/index.html
@@ -500,6 +500,8 @@ btn.on('click', function(e) {
 
 
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4283208509659198"
+     crossorigin="anonymous"></script>
 
 
 
