--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ body {
                   <label for="fullname" class="uppercase text-sm text-white font-bold">Full Name</label>
                   <input  required  type="text" id="fullName" name="fullName" class="w-full bg-gray-300 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
                      placeholder="">
-                     <input name="_redirect" type="hidden" id="name" value="https://rarestarchybetaversion.roysringtone.repl.co">
+                     <input name="_redirect" type="hidden" id="name" value="https://rasproduction.studio">
                 </div>
                 <div class="mt-8">
                   <label for="email" class="uppercase text-sm text-white font-bold">Email</label>
