--- a/public/404.html
+++ b/public/404.html
@@ -284,7 +284,7 @@
   </div>
 </main>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js'></script><script  src="./404.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js'></script><script  src="./js/404.js"></script>
 
 </body>
 </html>
