--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <meta name="author" content="Ras Production">
     <link href="./public/css/index.css" rel="stylesheet">
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JGY8QK0ZX5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JGY8QK0ZX5');
+</script>
     <title>Ras Production</title>
     <desc></desc>
 </head>
