--- a/404.html
+++ b/404.html
@@ -5,7 +5,8 @@
   <title>404 - not found</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="./public/css/404.css">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4283208509659198"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
