--- a/404.html
+++ b/404.html
@@ -285,7 +285,8 @@
   </div>
 </main>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js'></script><script  src="./public/js/404.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js'></script>
+	<script  src="./public/js/404.js"></script>
 
 </body>
 </html>
