--- a/public/pages/thanks.html
+++ b/public/pages/thanks.html
@@ -128,13 +128,13 @@ body {
       </div>
     </div>
   </nav>
-  
+ <br>
   <section>
-    <div>
-      <h1 class="center-mine container-mine" style="text-align: center;"><i class="fas fa-thumbs-up"></i></h1>
-      <h1 class="text-c">Thanks for your response</h1>
-      <p class="paragraph">we will response you within 5 business days</p>
-      <a class="button" href="">Take me Home</a>
+    <div class="text-center">
+<img style="" class="mx-auto mt-32" src="https://animated-gif-creator.com/images/01/animated-thumb-up-free-download-on-clipartmag_83.gif" alt="">
+      <h1 class="text-3xl text-white font-bold">Thanks for your response</h1>
+      <p class="text-sm text-white">we will contact you within 5 business days</p> <br>
+    <a style="margin-top: 500px" class="text-black rounded text-center px-6 py-2.5 bg-white font-bold" href="/">Take me Home</a>
     </div>
     
     
