--- a/index.html
+++ b/index.html
@@ -716,14 +716,14 @@
       </div>
 
 
-      <form onsubmit="alert("done")"  action="https://formsubmit.co/726c2ce2e7a3ab24246380d71664fca9" method="POST" id="my-form">
+      <form onsubmit="alert("done")"  action="https://formsubmit.io/send/f146116b-b77e-4c4b-b646-e3ec8b8160b7" method="POST" id="my-form">
         <div>
 
           <label for="fullname" class="uppercase text-sm text-white font-bold">Full Name</label>
           <input required type="text" id="fullName" name="fullName"
             class="w-full bg-gray-300 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
             placeholder="">
-         
+          <input name="_redirect" type="hidden" id="name" value="https://rasproduction.studio/public/pages/thanks.html">
         </div>
         <div class="mt-8">
           <label for="email" class="uppercase text-sm text-white font-bold">Email</label>
