--- a/public/pages/book.html
+++ b/public/pages/book.html
@@ -188,7 +188,7 @@
                     <input required type="text" id="fullName" name="fullName"
                         class="w-full bg-gray-300 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
                         placeholder="">
-                    <input name="_redirect" type="hidden" id="name" value="https://rasproduction.studio">
+                    <input name="_redirect" type="hidden" id="name" value="https://rasproduction.studio/public/pages/thanks.html">
                 </div>
                 <div class="mt-4">
                     <label for="email" class="uppercase text-sm text-white font-bold">Email</label>
