--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://www.google.com/recaptcha/api.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4283208509659198"
+     crossorigin="anonymous"></script>
   <!-- End Google Tag Manager -->
   <title>Ras Production</title>
   <desc></desc>
