--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-  <meta name="description" content="A Premium service for specials">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-  <meta name="author" content="Ras Production">
   <link href="./public/css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,6 +17,26 @@
      crossorigin="anonymous"></script>
   <!-- End Google Tag Manager -->
   <title>Ras Production</title>
+
+<!-- HTML Meta Tags -->
+<title>Ras Production</title>
+<meta name="description" content="A production team capable of photo & video shoots with video edits">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://rasproduction.studio/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Ras Production">
+<meta property="og:description" content="A production team capable of photo & video shoots with video edits">
+<meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7RPLZDHbhMw94GPvGJbCzbSMDfWPDGLQH6Q&usqp=CAU">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://rasproduction.studio/">
+<meta name="twitter:title" content="Ras Production">
+<meta name="twitter:description" content="A production team capable of photo & video shoots with video edits">
+<meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7RPLZDHbhMw94GPvGJbCzbSMDfWPDGLQH6Q&usqp=CAU">
+
+
   <desc></desc>
 </head>
 
